--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vim-monokai"]
-	path = vim-monokai
+[submodule "dotfiles/.vim/vim-monokai"]
+	path = dotfiles/.vim/vim-monokai
 	url = git@github.com:sickill/vim-monokai.git
