--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -78,7 +78,7 @@ set -g pane-active-border-bg yellow
 # set-option -g status-bg "colour248"
 ## 左パネルを設定する
 set -g status-left-length 50
-set -g status-left "host: #[fg=white,bg=colour241]#h#[bg=black] | tmux: #[bg=colour241,fg=yellow]#S#[fg=white]/#[fg=green]#I#[fg=white]/#[fg=cyan]#P#[fg=white,bg=black] | LA: #[bg=colour241]#(cut -d' ' -f-3 /proc/loadavg)#[bg=black]"
+set -g status-left "host: #[fg=white,bg=colour241]#h#[bg=black] | tmux: #[bg=colour241,fg=yellow]#S#[fg=white]/#[fg=green]#I#[fg=white]/#[fg=cyan]#P#[fg=white,bg=black] |"
 ## 右パネルを設定する
 set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 ## ステータスバーのUTF-8サポートを有効にする
