--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -46,10 +46,8 @@ set -g terminal-overrides 'xterm'
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # マウス操作を有効にする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+setw -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
