teratermの設定変更

--- a/windows/teraterm/TERATERM.INI
+++ b/windows/teraterm/TERATERM.INI
@@ -105,10 +105,10 @@ ANSIColor=0,0,0,0, 1,255,0,0, 2,0,255,0, 3,255,255,0, 4,128,128,255, 5,255,0,255
 EnableContinuedLineCopy=on
 
 ; Mouse cursor type (arrow/ibeam/cross/hand)
-MouseCursor=ibeam
+MouseCursor=IBEAM
 
 ; Translucent window (0 - 255: transparency value)
-AlphaBlend=255
+AlphaBlend=192
 
 ; Cygwin install path
 CygwinDirectory=
@@ -283,7 +283,7 @@ RussFont=Windows
 ;	Backspace key (BS/DEL)
 BSKey=BS
 ;	transmit DEL by Delete key (on/off)
-DeleteKey=on
+DeleteKey=off
 
 ;	Russian code set used in the keyboard driver
 RussKeyb=Windows
